Completed Credit Risk Evaluator

--- a/Credit Risk Evaluator.ipynb
+++ b/Credit Risk Evaluator.ipynb
@@ -2,18 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from pathlib import Path"
+    "from pathlib import Path\n",
+    "from sklearn.datasets import make_regression\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.preprocessing import  StandardScaler, MinMaxScaler, LabelEncoder"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +228,7 @@
        "[5 rows x 86 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -461,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -470,7 +473,7 @@
        "((12180, 83), (12180,), (4702, 83), (4702,))"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -489,16 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Convert categorical data to numeric and separate target feature for testing data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -509,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -519,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -545,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -582,14 +576,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Traing Score: 1.0\n",
+      "Training Score: 1.0\n",
       "Testing Score: 0.6405784772437261\n"
      ]
     }
@@ -605,29 +599,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Scale the data\n"
+    "# Scale the data\n",
+    "scaler = StandardScaler().fit(X_trainer)\n",
+    "X_trainer_scaled = scaler.transform(X_trainer)\n",
+    "X_tester_scaled = scaler.transform(X_tester)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training Score: 0.7083743842364532\n",
+      "Testing Score: 0.7681837515950659\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/admin/opt/anaconda3/lib/python3.8/site-packages/sklearn/linear_model/_logistic.py:763: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
+      "\n",
+      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+      "Please also refer to the documentation for alternative solver options:\n",
+      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+      "  n_iter_i = _check_optimize_result(\n"
+     ]
+    }
+   ],
    "source": [
-    "# Train the Logistic Regression model on the scaled data and print the model score"
+    "# Train the Logistic Regression model on the scaled data and print the model score\n",
+    "LR = LogisticRegression(solver='lbfgs', random_state=1)\n",
+    "LR.fit(X_trainer_scaled, Y_trainer)\n",
+    "print(f\"Training Score: {LR.score(X_trainer_scaled, Y_trainer)}\")\n",
+    "print(f\"Testing Score: {LR.score(X_tester_scaled, Y_tester)}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing Score: 1.0\n",
+      "Testing Score: 0.6405784772437261\n"
+     ]
+    }
+   ],
    "source": [
-    "# Train a Random Forest Classifier model on the scaled data and print the model score"
+    "# Train a Random Forest Classifier model on the scaled data and print the model score\n",
+    "rfc = RandomForestClassifier(random_state=1, n_estimators=500).fit(X_trainer_scaled, Y_trainer)\n",
+    "print(f'Testing Score: {rfc.score(X_trainer_scaled, Y_trainer)}')\n",
+    "print(f'Testing Score: {rfc.score(X_tester_scaled, Y_tester)}')"
    ]
   }
  ],
